--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="studyId">studyId</string>
     <string name="ok">OK</string>
     <string name="app_stage">development</string>
-    <string name="signup">SIGN UP</string>
+    <string name="signup">新規登録</string>
     <string name="cancel">Cancel</string>
     <string name="first_name">First Name</string>
     <string name="account_deletion">Account has been deleted.</string>
@@ -42,8 +42,8 @@
     <string name="feedback_text">We\'d love to hear from you! Please share your thoughts on how we can improve your experience of participating in health studies and contributing to a healthier world! Your feedback will be anonymous.</string>
     <string name="enter_confirm_password">confirm password</string>
     <string name="enter_contact_us">Please let us know what you need help with. We will get back to you at the earliest.</string>
-    <string name="agree">I Agree to the Terms and Privacy Policy</string>
-    <string name="submit">Submit</string>
+    <string name="agree">私は利用規約とプライバシーポリシーに同意します</string>
+    <string name="submit">送信</string>
     <string name="verification_step">Verification Step</string>
     <string name="tap_below_txt">Once done, tap on the \n button below.</string>
     <string name="continue_txt">Continue</string>
@@ -51,19 +51,19 @@
     <string name="verification_email">Enter email address</string>
     <string name="resend">Resend Verification Code</string>
     <string name="congrats_txt">Congrats!</string>
-    <string name="survey_completed">Activity Completed</string>
-    <string name="signup_process_complete">Thank you for registering. Your app account is now set up and ready to use.</string>
-    <string name="next">Next</string>
+    <string name="survey_completed">活動完了</string>
+    <string name="signup_process_complete">ご登録ありがとうございます。これでアプリのアカウントが設定され、使用可能な状態になりました。</string>
+    <string name="next">次へ</string>
     <string name="setup_passcode">Create Passcode</string>
     <string name="sign_in">SIGN IN</string>
-    <string name="sign_in_btn">Sign In</string>
+    <string name="sign_in_btn">サインイン</string>
     <string name="usr_pwd">with username and\n password</string>
     <string name="email">Email</string>
     <string name="new_password">New password</string>
     <string name="old_pasword">Current password</string>
     <string name="temp_password">Temporary password</string>
-    <string name="forgot_password">Forgot password?</string>
-    <string name="new_usr_signup">New User? Sign Up</string>
+    <string name="forgot_password">パスワードを忘れた方はこちら</string>
+    <string name="new_usr_signup">新規ユーザ？ 登録</string>
     <string name="use_touch_id">Use Touch ID</string>
     <string name="or">OR</string>
     <string name="passcode_to_access_app">Enter Passcode to\n access app</string>
@@ -79,17 +79,17 @@
     <string name="receive_push_notifctn">Receive Push Notifications?</string>
     <string name="recv_stdy_actrem">Receive Study Activity Reminders?</string>
     <string name="reminder">Set up lead time for study activity reminders</string>
-    <string name="sign_out">Sign Out</string>
+    <string name="sign_out">サインアウト</string>
     <string name="delete_my_account">Delete app account</string>
     <string name="update">Update</string>
-    <string name="get_started">Get Started</string>
+    <string name="get_started">始める</string>
     <string name="gateway_welcome">Welcome!</string>
     <string name="gateway_welcome1">Leveraging the Power of Mobility for Research</string>
     <string name="gateway_welcome2">Improving Health Outcomes</string>
     <string name="gateway_welcome3">Protecting Your Privacy</string>
     <string name="gateway_des2">Explore and participate in studies for which you are eligible and help generate more data, better insights and improved outcomes.</string>
     <string name="gateway_des3">All studies in this app have been approved by an Institutional Review Board, follow strict federal research guidelines, and securely store your responses to ensure your privacy is always protected.</string>
-    <string name="new_user">New User?</string>
+    <string name="new_user">新規登録</string>
     <string name="dashboard_label">Dashboard</string>
     <string name="activities_label">Activities</string>
     <string name="resources_label">Resources</string>
@@ -118,13 +118,13 @@
     <string name="agree_deleting_my_account">I agree, proceed to deleting my account</string>
     <string name="do_not_wish_to_delete_my_account">I do not wish to delete my account</string>
     <string name="confirmation">CONFIRMATION</string>
-    <string name="side_menu_home">Home</string>
-    <string name="side_menu_resources">Resources</string>
-    <string name="side_menu_reach_out">Reach Out</string>
-    <string name="side_menu_sign_in">Sign In</string>
-    <string name="side_menu_new_user">New User?</string>
-    <string name="side_menu_sign_up">Sign up</string>
-    <string name="side_menu_sign_out">Sign Out</string>
+    <string name="side_menu_home">ホーム</string>
+    <string name="side_menu_resources">リソース</string>
+    <string name="side_menu_reach_out">お問い合わせ</string>
+    <string name="side_menu_sign_in">サインイン</string>
+    <string name="side_menu_new_user">新規登録</string>
+    <string name="side_menu_sign_up">登録</string>
+    <string name="side_menu_sign_out">サインアウト</string>
     <string name="side_menu_version">v</string>
 
     <string name="survey">Survey</string>
@@ -135,7 +135,7 @@
     <string name="enter_enrollmentid">Enter enrollment ID</string>
     <string name="enrollmentdesc">This study allows only pre-screened participants to join the study. If you are one, please enter the enrollment ID provided to you for this study.</string>
     <string name="reviewconformmsg">By Agreeing you confirm that you read the consent and that you wish to take part in this research study.</string>
-    <string name="reviewmsg">Review the form below, and tap agree if you are ready to continue</string>
+    <string name="reviewmsg">以下のフォームを確認して、よろしければ「同意する」をタップしてください。</string>
     <string name="review">Review</string>
 
     <string name="verification_email_content1">An email has been sent to</string>
@@ -169,15 +169,15 @@
     <string name="resend_success">An email verification code has been sent to your registered email.</string>
 
 
-    <string name="consentthanksmsg">Consent confirmed</string>
-    <string name="studystartmsg">You can now start using the app to participate in the study.</string>
+    <string name="consentthanksmsg">同意の確認</string>
+    <string name="studystartmsg">これでアプリを使って治験に参加することができるようになりました。</string>
     <string name="viewpdf">View/Email eConsent PDF</string>
 
     <string name="eligibility">ELIGIBILITY</string>
 
     <string name="why_register">Why Register?</string>
     <string name="delete_account">Delete Account</string>
-    <string name="sign_out_message">Are you sure you want to sign out?</string>
+    <string name="sign_out_message">本当にサインアウトしますか？</string>
     <string name="sign_out_message_data_lost">Are you sure you want to sign out? Incomplete activities and activities completed while offline must be re-started when you next sign in.</string>
     <string name="first_name_empty">Please enter your first name.</string>
     <string name="subject_empty">Please enter your subject.</string>
@@ -188,7 +188,7 @@
     <string name="feedback_empty">Please enter your feedback.</string>
     <string name="feedback_submit_success">Thank you. Your Form has been successfully submitted!</string>
 
-    <string name="eligibledesc">Based on the answers you provided, you are eligible to participate in this study. You may proceed to the next steps.</string>
+    <string name="eligibledesc">あなたが提供した回答に基づいて、あなたはこの治験に参加する資格があります。次のステップに進んでください。</string>
     <string name="enrollvalidated">Your eligibility to participate in this study has been successfully verified. You may proceed to the next steps.</string>
 
     <string name="search_location">search location</string>
@@ -329,8 +329,8 @@
     <string name="signtitle">Signature</string>
     <string name="signdesc">Please sign using your finger on the line below.</string>
     <string name="use_passcode">Use Passcode to access app</string>
-    <string name="enter_passcode">Enter a 4-digit passcode</string>
-    <string name="enter_passcode_to_access_app">Passcode helps you unlock the app</string>
+    <string name="enter_passcode">4桁のパスコードを入力します。</string>
+    <string name="enter_passcode_to_access_app">パスコードは、アプリのロックを解除するのに役立ちます</string>
     <string name="usepasscode">usePassCode</string>
     <string name="permission_deniedDate">Permission denied to read/write so couldn\'t display PDF</string>
     <string name="consentPdfNotAvailable">consent PDF not available</string>
@@ -379,7 +379,7 @@
     <string name="runchartmaxindex">runchartmaxindex</string>
     <string name="passcode_confirm_reenter">Re-enter the 4-digit passcode</string>
     <string name="enter_your_passcode">Enter your passcode</string>
-    <string name="thank_you_for_your_time">Thank you for your time</string>
+    <string name="thank_you_for_your_time">お疲れ様でした。</string>
     <string name="permission_enable_message_screenshot">Please enable the permission from settings to share the Screen Shot</string>
     <string name="search">Search</string>
     <string name="apply">Apply</string>
@@ -417,7 +417,7 @@
     <string name="radiation_emitting_products">Radiation-Emitting Products</string>
     <string name="tobacco_use">Tobacco Use</string>
 
-    <string name="surveycompletedmsg">Tap Done to submit responses. Responses cannot be modified after submission.</string>
+    <string name="surveycompletedmsg">完了をタップして、回答を送信します。送信後の回答の変更はできません。</string>
     <string name="action_cancel">Exit</string>
     <string name="clear"> Clear</string>
     <string name="endtask">End Task</string>
@@ -448,7 +448,7 @@
     <string name="search_data_empty">Sorry, no studies found. Please try different filter options.</string>
     <string name="delete">DELETE</string>
     <string name="retain_my_data_caps">RETAIN MY DATA</string>
-    <string name="cancel_caps">CANCEL</string>
+    <string name="cancel_caps">キャンセル</string>
     <string name="profile_updated">Profile Updated</string>
     <string name="app_glossary">App Glossary</string>
     <string name="proceed_caps">PROCEED</string>
@@ -456,11 +456,11 @@
     <string name="delete_my_data_caps">DELETE MY DATA</string>
     <string name="sign_up">Sign Up</string>
     <string name="you_agree_this_app">By tapping Sign In, you agree to this app\'s</string>
-    <string name="terms2">Terms</string>
-    <string name="and">and</string>
-    <string name="privacy_policy2">Privacy Policy</string>
+    <string name="terms2">利用規約</string>
+    <string name="and">と</string>
+    <string name="privacy_policy2">プライバシーポリシー</string>
     <string name="not_able_to_login">Not able to login</string>
-    <string name="i_agree">I Agree to the</string>
+    <string name="i_agree">私は以下に同意します。</string>
     <string name="unable_to_signup">Unable to Signup</string>
     <string name="please_enter_key">Please enter a key</string>
     <string name="search_data_not_available">Sorry, no Studies found. Please check the spelling or try a different search.</string>
@@ -509,11 +509,11 @@
     <string name="fetal_kick_recorder_activity">Fetal Kick Recorder Activity - Started</string>
     <string name="fetal_kick_recorder_activity_in_progress">Fetal Kick Recorder Activity - In Progress</string>
     <string name="noteligibledesc">Sorry, you are not eligible for participation in this study. We thank you for your interest and time, and encourage you to explore other studies as they are available in the app. </string>
-    <string name="you_are_eligible">Eligibility Confirmed</string>
-    <string name="validated">Eligibility Confirmed</string>
-    <string name="continuetxt">Continue</string>
-    <string name="ComprehensionSuccessDesc">You answered all of the questions correctly. Tap Next to continue.</string>
-    <string name="great_job">Great Job!</string>
+    <string name="you_are_eligible">適性確認</string>
+    <string name="validated">適性確認</string>
+    <string name="continuetxt">続ける</string>
+    <string name="ComprehensionSuccessDesc">すべての質問に正解しました。次へ をタップして次に進みます。</string>
+    <string name="great_job">Good Job！</string>
     <string name="consentfailuremsgdesc">You answered one or more questions wrong. We want to make sure you understand what this study is about and what is involved. Review the consent information screens and try again.</string>
     <string name="try_again">Try Again</string>
     <string name="retry">Retry</string>
@@ -528,7 +528,7 @@
     <string name="app_standalone">Standalone</string>
     <string name="app_gateway">Gateway</string>
     <string name="otherValuetxt">Please provide an input for the text field too.</string>
-    <string name="passcode_setup">A passcode helps with quick and secure access to the app. You can turn off the passcode at any time by using a setting provided in the app.</string>
+    <string name="passcode_setup">パスコードは、アプリへの迅速かつ安全なアクセスに役立ちます。アプリ内に用意されている設定で、いつでもパスコードをオフにすることができます。</string>
     <string name="we_will_get_back_to_you_as_soon_as_possible">We will get back to you as soon as possible.</string>
     <string name="signed_out">You have been signed out of the app.</string>
     <string name="pdf_consent_error">Error in processing consent</string>
